changes on readme file